--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,10 @@
 /*=================================================================================*/
 /*=================================================================================*/
 
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=El+Messiri:wght@400;500;600;700&display=swap');
 
 body {
+    font-family: 'Almarai', sans-serif;
     background: #f2f2f2;
 }
 
@@ -29,6 +31,7 @@ body {
 }
 
 .videoPlayer {
+    position: relative;
     width: 100%;
     height: 100%;
     background: #000;
@@ -75,21 +78,18 @@ body {
     overflow: auto;
 }
 
-.playlist::-webkit-scrollbar
-{
+.playlist::-webkit-scrollbar {
    width: 7px;
 }
 
-.playlist::-webkit-scrollbar-thumb
-{
+.playlist::-webkit-scrollbar-thumb {
    height: 50px;
    background: #375666;
    border: 5px solid transparent;
    border-radius: 5px;
 }
 
-.playlist::-webkit-scrollbar-thumb:active
-{
+.playlist::-webkit-scrollbar-thumb:active {
     background: #f30a40;
 }
 
