--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,10 @@
 /*=================================================================================*/
 
 @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=El+Messiri:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap');
 
 body {
-    font-family: 'Almarai', sans-serif;
+    font-family: 'Cairo', sans-serif;
     background: #f2f2f2;
 }
 
@@ -78,18 +79,21 @@ body {
     overflow: auto;
 }
 
-.playlist::-webkit-scrollbar {
+.playlist::-webkit-scrollbar
+{
    width: 7px;
 }
 
-.playlist::-webkit-scrollbar-thumb {
+.playlist::-webkit-scrollbar-thumb
+{
    height: 50px;
    background: #375666;
    border: 5px solid transparent;
    border-radius: 5px;
 }
 
-.playlist::-webkit-scrollbar-thumb:active {
+.playlist::-webkit-scrollbar-thumb:active
+{
     background: #f30a40;
 }
 
@@ -161,3 +165,66 @@ body {
 .vidDuration {
     color: #f99922;
 }
+
+.dialog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.dialogBox {   
+    width: 260px;
+    text-align: center;
+    padding: 20px 15px;
+    background: #002333;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.dialogBox h3 {
+    font-size: 17px;
+    margin-bottom: 30px;
+}
+
+.dialogBtns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row-reverse;
+}
+
+.dialog button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    width: 90px;
+    height: 40px;
+    border-radius: 5px;
+    color: inherit;
+    cursor: pointer;
+}
+
+.dialog button:hover {
+    background: #f30a40;
+}
+
+.confirm {
+    background: #f99922;
+}
+
+.cancel {
+    margin-inline-end: 10px;
+    background: #00ff95;
+    background: #5c0018;
+}
+
